CRUD user finished & rdy to be tested
